Add score and lines

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="hold-container">
       <canvas id="hold" width="200" height="200"></canvas>
       <div class="extra">
-        <div class="score"></div>
+        <div class="score">Score: 0</div>
         <div class="lines">Lines: 0</div>
+        <div class="level">Level: 1</div>
       </div>
     </div>
     <div class="main">
