fix play button

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
     </div>
     <div class="scoreBoard">
       <div>You have scored</div>
-      <div class="score"></div>
-      <div class="newHighScore">New High Score</div>
+      <div class="gameOverscore"></div>
+      <div id="newHighScore">New High Score</div>
     </div>
   </div>
   <div id="overlay"></div>
+  <script src="./js/app.js"></script>
   <script src="./js/shapes.js"></script>
   <script src="./js/constants.js"></script>
   <script src="./js/board.js"></script>
   <script src="./js/nextSection.js"></script>
   <script src="./js/holdSection.js"></script>
   <script src="./js/working.js"></script>
-  <script src="./js/app.js"></script>
   <script src="./js/piece.js"></script>
   <script src="./js/options.js"></script>
 </body>
